# dm-v1

./: .gitignore  README.md  pyproject.toml  test_progress.py  test_progress_hardening.py
src/: tree_.py
src/application/discovery/: discovery_result.py  link_classifier.py  link_filter.py  page_discovery_service.py
src/application/download/: download_execution_service.py
src/application/engine/: background_engine_service.py  connection_manager.py  download_engine.py
src/application/events/: archive_task_listener.py  task_events.py
src/application/grabber/: grabber_base.py  grabber_engine.py  grabber_result.py  item_type.py  preview_renderer.py  url_resolver.py
src/application/hls/: hls_analyzer.py  hls_downloader.py  hls_engine.py  hls_manifest.py  hls_result.py  hls_variant.py
src/application/mapping/: queue_id_translator.py
src/application/progress/: __init__.py  console_progress_reporter.py  multi_progress_manager.py  progress_aggregator.py  progress_manager.py  progress_manager_registry.py  progress_reporter.py  progress_snapshot.py  progress_state.py
src/application/use_cases/: add_task_service.py  archive_service.py  execute_task_by_queue_service.py  execute_task_service.py  list_tasks_service.py  pause_all_service.py  pause_multiple_service.py  queue_management_service.py  remove_task_by_queue_service.py  remove_task_service.py  resume_multiple_service.py  start_task_by_queue_service.py  start_task_service.py  task_target_parser.py
src/cli/: app.py  bootstrap.py
src/domain/entities/: download_task.py  task_status.py
src/domain/repositories/: task_repository.py
src/infrastructure/fs/: file_writer.py
src/infrastructure/network/: http_downloader.py
src/infrastructure/persistence/: sqlite_repository.py
(+4 files in other folders)
